tests/compose/compose.exp
Error ----------------------------------------------------------------------------------------------------- basic.js:4:2

Cannot cast `compose(...)(...)` to empty because string [1] is incompatible with empty [2]. [incompatible-cast]

   basic.js:4:2
     4| (compose((n: number) => n.toString())(42): empty); // Error: string ~> empty
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/core.js:485:31
   485|     toString(radix?: number): string;
                                      ^^^^^^ [1]
   basic.js:4:44
     4| (compose((n: number) => n.toString())(42): empty); // Error: string ~> empty
                                                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- basic.js:6:2

Cannot cast `composeReverse(...)(...)` to empty because string [1] is incompatible with empty [2]. [incompatible-cast]

   basic.js:6:2
     6| (composeReverse((n: number) => n.toString())(42): empty); // Error: string ~> empty
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/core.js:485:31
   485|     toString(radix?: number): string;
                                      ^^^^^^ [1]
   basic.js:6:51
     6| (composeReverse((n: number) => n.toString())(42): empty); // Error: string ~> empty
                                                          ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- basic.js:8:2

Cannot cast `compose(...)(...)` to empty because number [1] is incompatible with empty [2]. [incompatible-cast]

   basic.js:8:2
        v-------
    8| (compose(
    9|   (n: number) => n * 5, // Error: string cannot be multiplied.
   10|   (n: number) => n.toString(),
   11| )(42): empty); // Error: number ~> empty
       ----^

References:
   basic.js:9:18
    9|   (n: number) => n * 5, // Error: string cannot be multiplied.
                        ^^^^^ [1]
   basic.js:11:8
   11| )(42): empty); // Error: number ~> empty
              ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- basic.js:9:3

Cannot call `compose` with compose intermediate value bound to `n` because string [1] is incompatible with number [2].
[incompatible-call]

   basic.js:9:3
     9|   (n: number) => n * 5, // Error: string cannot be multiplied.
          ^^^^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/core.js:485:31
   485|     toString(radix?: number): string;
                                      ^^^^^^ [1]
   basic.js:9:7
     9|   (n: number) => n * 5, // Error: string cannot be multiplied.
              ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- basic.js:13:2

Cannot cast `composeReverse(...)(...)` to empty because string [1] is incompatible with empty [2]. [incompatible-cast]

   basic.js:13:2
         v--------------
    13| (composeReverse(
    14|   (n: number) => n * 5, // OK
    15|   (n: number) => n.toString(),
    16| )(42): empty); // Error: string ~> empty
        ----^

References:
   <BUILTINS>/core.js:485:31
   485|     toString(radix?: number): string;
                                      ^^^^^^ [1]
   basic.js:16:8
    16| )(42): empty); // Error: string ~> empty
               ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- recompose.js:23:19

Cannot call `Math.round` with `props.p` bound to `x` because string [1] is incompatible with number [2].
[incompatible-call]

   recompose.js:23:19
    23|     c: Math.round(props.p), // Error: string ~> number
                          ^^^^^^^

References:
   recompose.js:22:27
    22|   myEnhancer((props: {|p: string|}) => ({
                                  ^^^^^^ [1]
   <BUILTINS>/core.js:655:14
   655|     round(x: number): number,
                     ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- spread.js:4:2

A spread argument is unsupported here. [unsupported-syntax]

   4| (compose(...fns)(42): empty); // Error: unsupported
       ^^^^^^^^^^^^^^^



Found 7 errors
